# fastapi-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: alembic.ini  main.py
app/api/v1/: api.py  auth.py  deps.py
app/api/v1/endpoints/: __init__.py  auth.py  board.py  post.py
app/core/: base.py  config.py  database.py  deps.py  exceptions.py  redis.py  redis_session.py  security.py  session.py
app/crud/: __init__.py  base.py  board.py  post.py  user.py
app/db/: __init__.py  base.py  session.py
app/migrations/: env.py
app/models/: __init__.py  board.py  post.py  user.py
app/redis/: session.py
app/schemas/: __init__.py  auth.py  board.py  pagination.py  post.py  user.py
app/services/: auth.py  auth_service.py  board.py  board_service.py  post.py  post_service.py
migrations/: env.py
migrations/versions/: 2059bf0e827e_add_optimized_indexes_for_created_at_.py  2d5177af924c_add_triggers_for_board_posts_count.py  2fc7d77492f6_initial_migration_with_users_boards_.py  3050c1f1b9a0_drop_triggers_and_sync_posts_count.py  f0a295d9b31c_create_users_boards_posts_tables.py
scripts/: create_dummy_data.py  create_dummy_data.sh  run_tests.sh
tests/: conftest.py  utils.py
tests/api/: test_auth.py
tests/api/v1/endpoints/: test_auth.py  test_board.py  test_post.py
tests/crud/: test_user_crud.py
tests/services/: test_auth_service.py
