[tool.poetry]
name = "board-api"
version = "1.0.0"
description = "FastAPI Board API with Redis Session Management"
authors = ["LimJiAn <jian1990@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
uvicorn = {extras = ["standard"], version = "0.35.0"}
sqlalchemy = "2.0.43"
psycopg2-binary = "2.9.10"
redis = "6.4.0"
alembic = "1.16.4"
python-dotenv = "1.1.1"
pydantic = {extras = ["email"], version = "2.11.7"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
python-multipart = "0.0.6"
bcrypt = "3.2.2"
fastapi-pagination = "0.13.3"
sqlakeyset = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.1.0"
httpx = "0.28.1"
pytest-mock = "3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
